--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.290.0",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
