--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "shad": "npx shadcn-ui@latest add"
+    "shad": "npx shadcn-ui@latest add",
+    "test": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -43,14 +44,20 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@tanstack/eslint-plugin-query": "^5.0.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "jsdom": "^23.2.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "vitest": "^1.1.3"
   }
 }
