ajustes para consulta de agendamentos

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-API_URL=http://localhost:3333
+# API_URL=http://localhost:3333
+API_URL=https://connect-sport-api.onrender.com
 NEXTAUTH_URL=http://localhost:3001
 NEXTAUTH_SECRET=4ae154d2-60c6-4429-a95e-455b8935cc47
 COPY_URL=http://localhost:3000
